<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="edu.middlebury.lex.quickbattle.MainActivity"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_pc_active"
                />

            <EditText
                android:id="@+id/etPC_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="number"
                android:layout_gravity="right"
                android:gravity="right"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_pc_passive" />

            <EditText
                android:id="@+id/etPC_passive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="number"
                android:layout_gravity="right"
                android:gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_opp_active" />

            <EditText
                android:id="@+id/etOpp_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="number"
                android:layout_gravity="right"
                android:gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_opp_passive" />

            <EditText
                android:id="@+id/etOpp_passive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="number"
                android:layout_gravity="right"
                android:gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_opp_hp" />

            <EditText
                android:id="@+id/etOpp_HP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="number"
                android:layout_gravity="right"
                android:gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_opp_ac" />

            <EditText
                android:id="@+id/etOpp_AC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="number"
                android:layout_gravity="right"
                android:gravity="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_char_ac" />

            <EditText
                android:id="@+id/et_Char_AC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="number"
                android:layout_gravity="right"
                android:gravity="right" />

            <TextView
                android:id="@+id/tv_roll"
                android:layout_width="140dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:textStyle="italic"
                />

            <Button
                android:id="@+id/enter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_roll"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"/>

        </GridLayout>

        <TextView
            android:id="@+id/calculated_damage"
            android:layout_width="200dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="25sp" />

    </LinearLayout>
</ScrollView>